# Petrobras_Competition

./: CMakeLists.txt  README.md  package.xml
launch/: CV.launch  FURG.launch  IME.launch  UFMG.launch  UFPA.launch  UFPB.launch  UFPel.launch  UFSCar.launch  UFSJ.launch  UNESP.launch  UNICAMP.launch  UTFPR.launch  simulation.launch
models/arena_spawn/: model.sdf
models/barcodeshelf/: .model.sdf.swp  model.config  model.sdf
models/equipmentA/: model.sdf
models/equipmentB/: model.sdf
models/equipmentC/: model.sdf
models/equipmentD/: model.sdf
models/equipmentE/: model.sdf
start/: .session.yml.swp  pos.yaml  session.yml  start.sh
start/CV/: session.yml  start.sh
start/FURG/: session.yml  start.sh
start/IME/: .tmuxinator.yml  start.sh
start/UFMG/: session.yml  start.sh
start/UFPA/: session.yml  start.sh
start/UFPB/: .tmuxinator.yml  start.sh
start/UFPel/: session.yml  start.sh
start/UFSCar/: session.yml  start.sh
start/UFSJ/: .tmuxinator.yml  start.sh
start/UNESP/: session.yml  start.sh  uav1_pos.yaml
start/UNICAMP/: session.yml  start.sh
start/UTFPR/: session.yml  start.sh
start/custom_configs/: control_manager.yaml
start/simulation/: pos.yaml  session.yml
start/start1-3/: session.yml
start/start4/: session.yml
worlds/: fase1.world  fase2.world  fase3.world  fase4.world  simulation.world
worlds/CV/: fase1.world  fase2.world  fase3.world  fase4.world
worlds/FURG/: fase1.world  fase2.world  fase3.world  fase4.world
worlds/IME/: fase1.world  fase2.world  fase3.world  fase4.world
worlds/UFMG/: fase1.world  fase2.world  (+2 more)
(+209 files in other folders)
